Refactor visual debugger code for consistency